update signin form

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,10 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <!-- <form name="sign-in" netlify data-netlify-recaptcha="true" hidden>
+      <input type="email" name="email-address" />
+      <input type="password" name="password"/>
+    </form> -->
     <div id="root"></div>
     <!--
       This HTML file is a template.
